# ViT-for-quadrotor-obstacle-avoidance

./: .gitignore  LICENSE  README.md  evaluation.yaml  launch_evaluation.bash  setup_ros.bash
Analysis/: gen_metrics.py
analysis/: gen_collision_plots.py  gen_plots.py
depthfly/: CMakeLists.txt  package.xml
depthfly/launch/: d435.launch  depthfly.launch
depthfly/scripts/: run.py
dodgedrone_simulation/: README.md
dodgedrone_simulation/dodgelib/: CMakeLists.txt  package.xml
dodgedrone_simulation/dodgelib/cmake/: catkin.cmake
dodgedrone_simulation/dodgelib/include/dodgelib/base/: module.hpp  parameter_base.hpp  pipeline.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/bridge/: bridge_base.hpp  debug_bridge.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/controller/: controller_base.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/estimator/: estimator_base.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/math/: gravity.hpp  integrator_base.hpp  integrator_rk4.hpp  math.hpp  types.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/pilot/: pilot.hpp  pilot_params.hpp  pipeline_config.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/reference/: hover_reference.hpp  reference_base.hpp  velocity_reference.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/sampler/: sampler_base.hpp
dodgedrone_simulation/dodgelib/include/dodgelib/simulator/: low_level_controller_base.hpp  low_level_controller_simple.hpp  model_base.hpp  model_init.hpp  (+5 more)
dodgedrone_simulation/dodgelib/params/: geo.yaml  mpc.yaml  pilot.yaml
dodgedrone_simulation/dodgelib/src/base/: parameter_base.cpp  pipeline.cpp
dodgedrone_simulation/dodgelib/src/bridge/: bridge_base.cpp  debug_bridge.cpp
dodgedrone_simulation/dodgelib/src/controller/: controller_base.cpp
dodgedrone_simulation/dodgelib/src/estimator/: estimator_base.cpp
dodgedrone_simulation/dodgelib/src/math/: integrator_base.cpp  integrator_rk4.cpp  math.cpp
dodgedrone_simulation/dodgelib/src/pilot/: pilot.cpp  pilot_params.cpp  pipeline_config.cpp
dodgedrone_simulation/dodgelib/src/reference/: hover_reference.cpp  reference_base.cpp  velocity_reference.cpp
dodgedrone_simulation/dodgelib/src/sampler/: sampler_base.cpp
dodgedrone_simulation/dodgelib/src/simulator/: low_level_controller_base.cpp  low_level_controller_simple.cpp  model_base.cpp  model_init.cpp  model_motor.cpp  model_rigid_body.cpp  model_thrust_torque_simple.cpp  quadrotor_simulator.cpp  simulator_base.cpp
dodgedrone_simulation/dodgelib/src/types/: command.cpp  quad_state.cpp  quadrotor.cpp
dodgedrone_simulation/dodgelib/src/utils/: logger.cpp  timer.cpp
dodgedrone_simulation/dodgeros/dodgeros/: CMakeLists.txt  package.xml
dodgedrone_simulation/dodgeros/dodgeros/include/dodgeros/: agisim.hpp  ros_eigen.hpp  ros_pilot.hpp  ros_setpoint.hpp  ros_traj_visualizer.hpp  time.hpp
dodgedrone_simulation/dodgeros/dodgeros/include/dodgeros/bridge/: ros_bridge.hpp
dodgedrone_simulation/dodgeros/dodgeros/launch/simulation/: agisim.launch
dodgedrone_simulation/dodgeros/dodgeros/parameters/: simple_sim_pilot.yaml
dodgedrone_simulation/dodgeros/dodgeros/parameters/quads/: kingfisher.yaml
dodgedrone_simulation/dodgeros/dodgeros/resources/gazebo_files/: basic.world  hummingbird.xacro  hummingbird_base.xacro  hummingbird_model.gazebo  kingfisher.xacro  kingfisher_base.xacro  kingfisher_model.gazebo
dodgedrone_simulation/dodgeros/dodgeros/resources/plotjuggler/: template.xml
dodgedrone_simulation/dodgeros/dodgeros/resources/rviz/: arena.rviz  real_world.rviz  simulation.rviz
dodgedrone_simulation/dodgeros/dodgeros/scripts/: create_quad_plotjuggler_config.py
dodgedrone_simulation/dodgeros/dodgeros/src/: ros_pilot.cpp  ros_traj_visualizer.cpp
dodgedrone_simulation/dodgeros/dodgeros/src/bridge/: ros_bridge.cpp
dodgedrone_simulation/dodgeros/dodgeros_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.py
dodgedrone_simulation/dodgeros/dodgeros_gui/resource/: pilot_widget.ui  quad_name_widget.ui
dodgedrone_simulation/dodgeros/dodgeros_gui/scripts/: rqt_dodgeros_gui
dodgedrone_simulation/dodgeros/dodgeros_gui/src/dodgeros_gui/: basic_flight_widget.py  pilot_widget.py  quad_widget_common.py
dodgedrone_simulation/dodgeros/dodgeros_msgs/: CMakeLists.txt  package.xml
dodgedrone_simulation/dodgeros/dodgeros_msgs/msg/: QuadState.msg  Reference.msg  Setpoint.msg  Telemetry.msg
envsim/generate_environment/: generate_multiple.bash
envsim/launch/: visionenv_sim.launch
envsim/parameters/: simple_sim_pilot.yaml
envsim/resources/rviz/: envsim.rviz
envsim/src/: visionsim_node.cpp
envtest/ros/: evaluation_config.yaml  evaluation_node.py  run_competition.py  summary.yaml  user_code.py  utils.py
flightmare/flightlib/src/bridges/: unity_bridge.cpp
flightmare/flightpy/configs/: scene.yaml
flightmare/flightpy/configs/control/: config.yaml
flightmare/flightpy/configs/vision/: .gitignore  config.yaml
flightmare/flightrender/: .gitignore
labutils/: DynamicobstacleGen.py  README.md  StaticobstacleGen.py  dataAnalytics.py  dataset.py  exchange_string_in_dir.py  obstacles.csv  staticObst_to_dynObst.py  utils.py
mav_comm/mav_msgs/: CMakeLists.txt
models/: ViTsubmodules.py  model.py
training/: .gitignore  dataloading.py  train.py
training/config/: train.txt
(+30 files in other folders)
